# NetBots-PoC

./: .gitignore  NOTES.md  PROPOSAL.md  README.md  package.json
client/: index.html  robot-template.ts  style.css
client/js/: api.js  main.js  renderer.js  ws.js
crates/engine/src/: collision.rs  lib.rs  scan.rs  tick.rs  world.rs
crates/wasm_runner/: Cargo.toml
crates/wasm_runner/src/: lib.rs  linker.rs  runner.rs  sandbox.rs
crates/wasm_runner/tests/: integration.rs  test_robot.wat
crates/web/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/web/assets/scss/: style.scss
crates/web/assets/scss/base/: _global.scss
crates/web/assets/scss/components/: _bot-controls.scss  _buttons.scss  _file-tree.scss  _logs.scss  _replay-controls.scss  _results.scss  _robot-inspector.scss
crates/web/assets/scss/layout/: _arena.scss  _editor.scss  _sidebar.scss
crates/web/assets/scss/theme/: _tokens.scss
crates/web/assets/ts/: api.ts  app.ts  context-menu.ts  dom.ts  editor.ts  file-store.ts  logs.ts  main.ts  manipulation.ts  placement.ts  renderer.ts  replay.ts  templates.ts  theme.ts  types.ts  ui.ts  virtual-fs.ts  visuals.ts
crates/web/js-src/: main.js
crates/web/src/: compiler.rs  main.rs  match_runner.rs  routes.rs  state.rs  validation.rs
crates/web/static/: robot-template.ts  style.css
crates/web/static/js/: api.js  main.js  renderer.js
crates/web/static/templates/: chaser.ts  sitter.ts  spinner.ts  wall-hugger.ts
crates/web/templates/: index.html
server/: Cargo.toml
server/crates/engine/: Cargo.toml
(+20 files in other folders)
