[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
engine = { path = "../engine" }
wasm_runner = { path = "../wasm_runner" }
askama = "0.15"
anyhow = "1"
tempfile = "3"
